# SnapSift

./: .gitignore  DEDUP_LOGIC.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: build-zip.bat  build-zip.ps1  build.bat  build.sh  dev.bat  dev.sh  export_model.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  dedup.rs  embedder.rs  lib.rs  models.rs  organizer.rs  scanner.rs  thumbnail.rs
src/components/: CreateProjectDialog.tsx  DuplicateGroupCard.tsx  FolderList.tsx  OrganizePanel.tsx  ScanProgress.tsx  ThumbnailImage.tsx
src/lib/: commands.ts  types.ts
src/pages/: DuplicateReview.tsx  ProjectDetail.tsx  ProjectList.tsx
