[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.6.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
uuid = { version = "1.20.0", features = ["v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
walkdir = "2"
rexif = "0.7"
image_hasher = "2"
image = "0.25"
md-5 = "0.10"
rayon = "1"
base64 = "0.22"
lru = "0.12"
tract-onnx = "0.21"
ndarray = "0.16"
ort = "2.0.0-rc.12"
